--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,43 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&display=swap');
 :root{
-  --green:#6ba900;
+  --green:#27ae60;
+  --dark-color:#219150;
+  --black:#444;
+  --light-color:#666;
+  --border:.1rem solid rgba(0,0,0,.1);
+  --border-hover:.1rem solid var(--black);
+  --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
+  --bg-sec:#f3ffdd;
+  --font-family:'Poppins', sans-serif;
 }
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing:
-    border-box;
-  text-transform: capitalize;
-  transition: all .2s linear;
-  transition: width none;
+
+
+
+/* -------------------------- Navbar CSS start here ------------------------- */
+
+.navbar
+{
+  background-color:var(--green);
+  font-family:var(--font-family);
+  font-weight: bolder;
+  box-shadow: -1px 15px 30px rgb(77, 77, 77);
+}
+.header .menu
+{
+  color: #fff;
+  padding: 10px;
+  margin: 0 10px;
+}
+.header .menu:hover
+{
+  border-bottom: 1px solid #000;
+  
+}
+.navbar-brand h2
+{
+  font-family: 'Lobster Two', cursive;
+  color: #fff;
+  font-size: 2.5rem;
+
 }
